# Copyright (c) 2016 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("analyzer_implementation") {
  defines = [ "JOANA_ANALYZER_IMPLEMENTATION" ]
}

source_set("analyzer") {
  sources = [
    "annotation.cc",
    "annotation.h",
    "built_in_world.cc",
    "built_in_world.h",
    "context.cc",
    "context.h",
    "context_user.cc",
    "context_user.h",
    "controller.cc",
    "controller.h",
    "error_codes.h",
    "factory.cc",
    "factory.h",
    "name_resolver.cc",
    "name_resolver.h",
    "pass.cc",
    "pass.h",
    "print_as_tree.cc",
    "print_as_tree.h",
    "properties.cc",
    "properties.h",
    "type.cc",
    "type.h",
    "type_checker.cc",
    "type_checker.h",
    "type_factory.cc",
    "type_factory.h",
    "type_forward.h",
    "type_map.cc",
    "type_map.h",
    "type_name_resolver.cc",
    "type_name_resolver.h",
    "type_printer.cc",
    "type_resolver.cc",
    "type_resolver.h",
    "types.cc",
    "types.h",
    "value.cc",
    "value.h",
    "value_editor.cc",
    "value_editor.h",
    "value_forward.h",
    "value_map.cc",
    "value_map.h",
    "value_printer.cc",
    "values.cc",
    "values.h",
  ]
  public_deps = [
    "//joana/ast",
    "//joana/base",
  ]

  configs += [ ":analyzer_implementation" ]
}

source_set("test_files") {
  testonly = true
  sources = [
    "analyzer_test_base.cc",
    "analyzer_test_base.h",
    "name_resolver_test.cc",
    "type_resolver_test.cc",
  ]
  deps = [
    ":analyzer",
    "//joana/analyzer/public",
    "//joana/testing",
    "//testing/gtest",
  ]
}
