# Copyright (c) 2016 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("ast_implementation") {
  defines = [ "JOANA_AST_IMPLEMENTATION" ]
}

component("ast") {
  output_name = "joana_ast"
  sources = [
    "bindings.cc",
    "bindings.h",
    "compilation_units.cc",
    "compilation_units.h",
    "declarations.cc",
    "declarations.h",
    "error_codes.cc",
    "error_codes.h",
    "expressions.cc",
    "expressions.h",
    "jsdoc_syntaxes.cc",
    "jsdoc_syntaxes.h",
    "jsdoc_tags.h",
    "literals.cc",
    "literals.h",
    "node.cc",
    "node.h",
    "node_factory.cc",
    "node_factory.h",
    "node_traversal.cc",
    "node_traversal.h",
    "regexp.cc",
    "regexp.h",
    "statements.cc",
    "statements.h",
    "syntax.cc",
    "syntax.h",
    "syntax_factory.cc",
    "syntax_factory.h",
    "syntax_forward.h",
    "syntax_printer.cc",
    "tokens.cc",
    "tokens.h",
    "types.cc",
    "types.h",
  ]

  public_deps = [
    "//base",
    "//joana/base",
  ]

  configs += [ ":ast_implementation" ]
}

source_set("test_files") {
  testonly = true
  sources = [
    "node_test.cc",
  ]
  deps = [
    ":ast",
    "//testing/gtest",
  ]
}
